# Medibot

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PACKAGE_INFO.md  QUICKSTART.md  README.md  frames_2026-05-01_00.08.46.gv  setup.cfg  setup.py  setup.sh
description/: medibot.urdf
launch/: medibot_launch.py
medibot_description/: CMakeLists.txt  package.xml
medibot_description/urdf/: medibot.urdf
medibot_gazebo/: CMakeLists.txt  package.xml
medibot_gazebo/worlds/: hospital.world
src/medibot/: package.xml  setup.py
src/medibot_description/: CMakeLists.txt  package.xml
src/medibot_description/launch/: display.launch.py
src/medibot_description/urdf/: medibot.odt  medibot.urdf  medibot.urdf.xacro
src/medibot_gazebo/: CMakeLists.txt  package.xml
src/medibot_gazebo/launch/: hospital_simulation.launch.py  sim.launch.py
src/medibot_gazebo/worlds/: hospital.world
src/medibot_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/medibot_navigation/config/: nav2_params.yaml
src/medibot_navigation/launch/: full_navigation.launch.py  navigation.launch.py  slam.launch.py  slam_simulation.launch.py
src/medibot_navigation/maps/: hospital_map.pgm  hospital_map.yaml
src/medibot_navigation/scripts/: navigate_to_goal.py
