<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medibot_navigation</name>
  <version>0.0.1</version>
  <description>Navigation configuration and launch files for Medibot</description>
  <maintainer email="medibot@example.com">medibot</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>medibot_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
